@@ -21,7 +21,9 @@ import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -103,13 +105,21 @@ public class DocumentServiceImpl implements iDocumentService {
     }
 
     @Override
-    public List<UserDocumentDTO> getAllUserDocuments() {
-        return documentRepository.findAll().stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+    public Page<UserDocumentDTO> getAllUserDocuments(int page, int size) {
+        List <UserDocumentDTO> documents = documentRepository.findAll().stream().map(DocumentMapper::toUserDTO).toList();
+        int start = Math.min(page * size, documents.size());
+        int end = Math.min(start + size, documents.size());
+        List<UserDocumentDTO> pagedList = documents.subList(start, end);
+        return new PageImpl<>(pagedList, PageRequest.of(page, size), documents.size());
     }
 
     @Override
-    public List<AdminDocumentDTO> getAllAdminDocuments() {
-        return documentRepository.findAll().stream().map(DocumentMapper::toAdminDTO).collect(Collectors.toList());
+    public Page<AdminDocumentDTO> getAllAdminDocuments( int page, int size) {
+        List<AdminDocumentDTO> documents = documentRepository.findAll().stream().map(DocumentMapper::toAdminDTO).toList();
+        int start = Math.min(page * size, documents.size());
+        int end = Math.min(start + size, documents.size());
+        List<AdminDocumentDTO> pagedList = documents.subList(start, end);
+        return new PageImpl<>(pagedList, PageRequest.of(page, size), documents.size());
     }
 
     @Override
@@ -122,7 +132,7 @@ public class DocumentServiceImpl implements iDocumentService {
             // Tăng viewCount
             document.setViewCount(document.getViewCount() + 1);
             documentRepository.save(document);
-            if (role.equals("ROLE_MEMBER")) {
+            if (role.contains("ROLE_MEMBER")) {
                 // Kiểm tra xem user này đã xem tài liệu chưa
                 MemberEntity currentMem = (MemberEntity) userRepository.findByEmail(userName).get();
                 boolean alreadyViewed = documentViewRepository.existsByDocument_DocumentIdAndMember_UserId(documentId, currentMem.getUserId());
@@ -140,7 +150,7 @@ public class DocumentServiceImpl implements iDocumentService {
                 }
             }
             // Kiểm tra vai trò từ token
-            if (role.equals("ROLE_ADMIN") || role.equals("ROLE_MODERATOR")) {
+            if (role.contains("ROLE_ADMIN") || role.contains("ROLE_MODERATOR")) {
                 return DocumentMapper.toAdminDTO(document);
             } else {
                 return DocumentMapper.toUserDTO(document);
@@ -151,31 +161,101 @@ public class DocumentServiceImpl implements iDocumentService {
     }
 
     @Override
-    public Object searchDocuments(String keyword, String role) {
+    public Page<UserDocumentDTO> searchDocumentsForGuest(String keyword, int page, int size) {
+        List<DocumentEntity> documents = documentRepository.findAll(
+                DocumentSpecification.searchByKeyword(keyword)
+        );
+
+        if (documents.isEmpty()) {
+            throw new NotFoundError("Không tìm thấy tài liệu nào!");
+        }
+
+        // Chỉ trả về các tài liệu đã duyệt/public (ví dụ: status = APPROVED)
+        List<UserDocumentDTO> filtered = documents.stream()
+                .filter(doc -> doc.getStatus().equals("APPROVED"))
+                .map(DocumentMapper::toUserDTO)
+                .toList();
+
+        int start = Math.min(page * size, filtered.size());
+        int end = Math.min(start + size, filtered.size());
+        List<UserDocumentDTO> paged = filtered.subList(start, end);
+
+        return new PageImpl<>(paged, PageRequest.of(page, size), filtered.size());
+    }
+
+    @Override
+    public Object searchDocumentsForAuthUser(String keyword, int page, int size, String role) {
         try {
-            List<DocumentEntity> documents = documentRepository.findAll(DocumentSpecification.searchByKeyword(keyword));
+            List<DocumentEntity> documents = documentRepository.findAll(
+                    DocumentSpecification.searchByKeyword(keyword)
+            );
+
             if (documents.isEmpty()) {
                 return new NotFoundError("Không tìm thấy tài liệu nào!");
             }
 
-            if (role.equals("ROLE_ADMIN") || role.equals("ROLE_MODERATOR")) {
-                return documents.stream().map(DocumentMapper::toAdminDTO).collect(Collectors.toList());
+            if (role.contains("ROLE_ADMIN") || role.contains("ROLE_MODERATOR")) {
+                List<AdminDocumentDTO> adminDocs = documents.stream()
+                        .map(DocumentMapper::toAdminDTO)
+                        .toList();
+                int start = Math.min(page * size, adminDocs.size());
+                int end = Math.min(start + size, adminDocs.size());
+                return new PageImpl<>(adminDocs.subList(start, end), PageRequest.of(page, size), adminDocs.size());
             } else {
-                return documents.stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+                List<UserDocumentDTO> userDocs = documents.stream()
+                        .map(DocumentMapper::toUserDTO)
+                        .toList();
+                int start = Math.min(page * size, userDocs.size());
+                int end = Math.min(start + size, userDocs.size());
+                return new PageImpl<>(userDocs.subList(start, end), PageRequest.of(page, size), userDocs.size());
             }
+
         } catch (RuntimeException e) {
-            return new UnauthorizedError(e.getMessage());
+            return new InternalServerError(e.getMessage());
         }
     }
 
     @Override
-    public Object filterDocuments(UUID courseId, UUID universityId, LocalDateTime uploadDate, boolean sortByViews, boolean sortByLikes, boolean sortByDisLike, String status, boolean isAdmin) {
+    public Page<UserDocumentDTO> getSearchSuggestions(String keyword) {
+        Pageable limitFive = PageRequest.of(0, 5); // Giới hạn top 5 gợi ý
+
+        Page<DocumentEntity> documentPage = documentRepository
+                .findByTitleContainingIgnoreCase(keyword, limitFive);
+
+        if (documentPage.isEmpty()) {
+            throw new NotFoundError("Không có gợi ý phù hợp!");
+        }
+
+        return documentPage.map(DocumentMapper::toUserDTO);
+    }
+
+    @Override
+    public Object filterDocuments(String keyword, UUID courseId, UUID universityId, String uploadDate,
+                                  boolean sortByViews, boolean sortByLikes, boolean sortByDisLike,
+                                  boolean sortByNewest, boolean sortByOldest, boolean sortByReportCount,
+                                  String status, boolean isAdmin, int page, int size) {
         try {
-            List<DocumentEntity> documents = documentRepository.findAll(DocumentSpecification.filterDocuments(courseId, universityId, uploadDate, sortByViews, sortByLikes, sortByDisLike, status, isAdmin));
+            List<DocumentEntity> searchDocuments = documentRepository.findAll(
+                    DocumentSpecification.searchByKeyword(keyword)
+            );
+            // covert String uploadDate to LocalDateTime
+            LocalDateTime uploadDateTime = null;
+            if (uploadDate != null && !uploadDate.isEmpty()) {
+                uploadDateTime = LocalDateTime.parse(uploadDate);
+            }
+            List<DocumentEntity> documents = documentRepository.findAll(DocumentSpecification.filterDocuments(searchDocuments, courseId, universityId, uploadDateTime, sortByViews, sortByLikes, sortByDisLike, sortByNewest, sortByOldest, sortByReportCount, status, isAdmin));
             if (isAdmin) {
-                return documents.stream().map(DocumentMapper::toAdminDTO).collect(Collectors.toList());
+                List<AdminDocumentDTO> adDocDTO = documents.stream().map(DocumentMapper::toAdminDTO).toList();
+                int start = Math.min(page * size, adDocDTO.size());
+                int end = Math.min(start + size, adDocDTO.size());
+                List<AdminDocumentDTO> pagedList = adDocDTO.subList(start, end);
+                return new PageImpl<>(pagedList, PageRequest.of(page, size), adDocDTO.size());
             } else {
-                return documents.stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+                List<UserDocumentDTO> userDocDTO = documents.stream().map(DocumentMapper::toUserDTO).toList();
+                int start = Math.min(page * size, userDocDTO.size());
+                int end = Math.min(start + size, userDocDTO.size());
+                List<UserDocumentDTO> pagedList = userDocDTO.subList(start, end);
+                return new PageImpl<>(pagedList, PageRequest.of(page, size), userDocDTO.size());
             }
         } catch (RuntimeException e) {
             return new UnauthorizedError(e.getMessage());
@@ -453,7 +533,7 @@ public class DocumentServiceImpl implements iDocumentService {
     }
 
     @Override
-    public List<DocumentEntity> getRecommendedDocuments(UUID memberId) {
+    public Page<DocumentEntity> getRecommendedDocuments(UUID memberId, int page, int size) {
         // Kiểm tra người dùng có tồn tại không
         MemberEntity member = (MemberEntity) userRepository.findById(memberId)
                 .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại"));
@@ -464,30 +544,43 @@ public class DocumentServiceImpl implements iDocumentService {
         // Nếu không theo dõi khóa học nào, lấy danh sách tài liệu đã xem
         List<UUID> viewedDocumentIds = documentViewRepository.findViewedDocumentsByMemberId(memberId);
 
-        return documentRepository.findAll(DocumentSpecification.recommendDocuments(courseIds, viewedDocumentIds));
+        Specification<DocumentEntity> spec = DocumentSpecification.recommendDocuments(courseIds, viewedDocumentIds);
+
+        return documentRepository.findAll(spec, PageRequest.of(page, size));
     }
 
     @Override
-    public List<DocumentEntity> getHistoryDocuments(UUID memberId) {
+    public Page<UserDocumentDTO> getRecommendedDocumentsForUI(UUID memberId, int page, int size) {
+        Page<DocumentEntity> recommendedDocuments = getRecommendedDocuments(memberId, page, size);
+        return recommendedDocuments.map(DocumentMapper::toUserDTO);
+    }
+
+    @Override
+    public Page<DocumentEntity> getHistoryDocuments(UUID memberId, int page, int size) {
         try {
             MemberEntity member = (MemberEntity) userRepository.findById(memberId)
                     .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại"));
-            List<DocumentViewEntity> historyViewDocuments = documentViewRepository.findHistoryDocumentsByMemberId(memberId);
-            System.out.println(historyViewDocuments);
-            return historyViewDocuments.stream().map(DocumentViewEntity::getDocument).collect(Collectors.toList());
+
+            List<DocumentViewEntity> historyViewDocuments = documentViewRepository.findHistoryDocumentsByMemberId(member.getUserId());
+            List<DocumentEntity> allDocuments = historyViewDocuments.stream()
+                    .map(DocumentViewEntity::getDocument)
+                    .collect(Collectors.toList());
+
+            int start = Math.min(page * size, allDocuments.size());
+            int end = Math.min(start + size, allDocuments.size());
+            List<DocumentEntity> pagedList = allDocuments.subList(start, end);
+
+            return new PageImpl<>(pagedList, PageRequest.of(page, size), allDocuments.size());
         } catch (RuntimeException e) {
             throw new InternalServerError(e.getMessage());
         }
     }
 
     @Override
-    public List<UserDocumentDTO> getHistoryDocumentsForUI(UUID memberId) {
+    public Page<UserDocumentDTO> getHistoryDocumentsForUI(UUID memberId, int page, int size) {
         try {
-            MemberEntity member = (MemberEntity) userRepository.findById(memberId)
-                    .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại"));
-            List<DocumentEntity> historyViewDocuments = getHistoryDocuments(memberId);
-            System.out.println(historyViewDocuments);
-            return historyViewDocuments.stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+            Page<DocumentEntity> historyViewDocuments = getHistoryDocuments(memberId, page, size);
+            return historyViewDocuments.map(DocumentMapper::toUserDTO);
         } catch (RuntimeException e) {
             throw new InternalServerError(e.getMessage());
         }
@@ -509,34 +602,38 @@ public class DocumentServiceImpl implements iDocumentService {
     }
 
     @Override
-    public List<DocumentEntity> getDocumentByCourseAndFollowedByMember(UUID memberId) {
+    public Page<DocumentEntity> getDocumentByCourseAndFollowedByMember(UUID memberId, int page, int size) {
         try {
-            MemberEntity member = (MemberEntity) userRepository.findById(memberId)
-                    .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại"));
             List<UUID> courseIds = courseRepository.findFollowedCoursesByMemberId(memberId);
-            return documentRepository.findAll(DocumentSpecification.recommendDocuments(courseIds, null));
+            return documentRepository.findAll(DocumentSpecification.recommendDocuments(courseIds, null), PageRequest.of(page, size));
         } catch (RuntimeException e) {
             throw new InternalServerError(e.getMessage());
         }
     }
 
     @Override
-    public List<UserDocumentDTO> getDocumentByCourseAndFollowedByMemberForUI(UUID memberId) {
+    public Page<UserDocumentDTO> getDocumentByCourseAndFollowedByMemberForUI(UUID memberId, int page, int size) {
         try {
-            MemberEntity member = (MemberEntity) userRepository.findById(memberId)
-                    .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại"));
-            List<DocumentEntity> documents = getDocumentByCourseAndFollowedByMember(memberId);
-            return documents.stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+            Page<DocumentEntity> documents = getDocumentByCourseAndFollowedByMember(memberId, page, size);
+            return documents.map(DocumentMapper::toUserDTO);
         } catch (RuntimeException e) {
             throw new InternalServerError(e.getMessage());
         }
     }
 
     @Override
-    public List<UserDocumentDTO> getDocumentByAuthor(UUID authorId) {
+    public Page<UserDocumentDTO> getDocumentByAuthor(UUID authorId, int page, int size) {
         try {
             List<DocumentEntity> documents = documentRepository.findByAuthor_UserId(authorId);
-            return documents.stream().map(DocumentMapper::toUserDTO).collect(Collectors.toList());
+            List<UserDocumentDTO> dtos = documents.stream()
+                    .map(DocumentMapper::toUserDTO)
+                    .collect(Collectors.toList());
+
+            int start = Math.min(page * size, dtos.size());
+            int end = Math.min(start + size, dtos.size());
+            List<UserDocumentDTO> pagedList = dtos.subList(start, end);
+
+            return new PageImpl<>(pagedList, PageRequest.of(page, size), dtos.size());
         } catch (RuntimeException e) {
             throw new InternalServerError(e.getMessage());
         }
